--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,32 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="google-site-verification" content="googlef2c299a980d5257b" />
+
+  <title>Akinola Victor | Software Engineer in LASU | Backend & Full-Stack Developer</title>
+
+  <meta name="description"
+    content="Victor is a software engineer in LASU specializing in backend systems, Java, Spring Boot, microservices, and full-stack development." />
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Victor",
+  "jobTitle": "Software Engineer",
+  "affiliation": {
+    "@type": "EducationalOrganization",
+    "name": "Lagos State University"
+  },
+  "url": "https://akinola-victor-portfolio.netlify.app/",
+  "sameAs": [
+    "https://www.linkedin.com/in/akinola-victor-27a33b320/",
+    "https://github.com/Alphaboy20023"
+  ]
+}
+</script>
+
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,7 +51,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Akinola Victor Portfolio</title>
 </head>
 
 <body>
